# damens_mcps

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_QUALITY.md  CONTRIBUTING.md  EXCEPTION_HANDLING_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS.md  LICENSE  README.md  RESILIENCE_GUIDE.md  SECURITY.md  SECURITY_INCIDENT_RESPONSE.md  SECURITY_SUMMARY.md  SETUP_GUIDE.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  run_all_tests.sh  run_code_quality_checks.sh
.github/: CODEOWNERS  COPILOT_QUICK_REFERENCE.md  COPILOT_SETUP.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
idrac-mcp/: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  SECURITY_WARNING.md  USAGE_GUIDE.md  check_env.py  config.example.json  debug_raw_responses.py  env.example  fleet_cli.py  mcp_server.py  pytest.ini  requirements.txt  secure_fleet_cli.py  simple_mcp_server.py  test_basic_functionality.py  test_connection.py  test_fixed_parsing.py  test_mcp_server.py  test_multi_server.py  test_real_idrac.py  test_server.py  working_mcp_server.py
pfsense-mcp/: .env  CONTRIBUTING.md  IMPLEMENTED_TOOLS.md  PROJECT_PLAN.md  README.md  SECURITY.md  SUMMARY.md  debug_auth.py  discover_endpoints.py  env.example  pytest.ini  requirements.txt  setup.py  test_endpoints.py  test_jwt.py  test_server.py  test_tools.py
proxmox-mcp/: .gitignore  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  PLAN.md  (+17 more)
truenas-mcp/: .dockerignore  .env  .env.example  CONTRIBUTING.md  ENHANCED_README.md  PFSENSE_MCP_PROMPT.md  PLAN.md  README.md  SECURITY.md  WORKING_ENDPOINTS.md  WORKING_README.md  env.example  pyproject.toml  requirements.txt  test_simple_mcp.py
truenas-mcp/docker/: Dockerfile  docker-compose.yml  run.sh  test-env.sh
truenas-mcp/docs/: API_REFERENCE.md  DEPLOYMENT.md
truenas-mcp/examples/: basic_usage.py  config.json.example  env.example
truenas-mcp/k8s/: configmap.yaml  deployment.yaml  service.yaml
truenas-mcp/src/: __init__.py  auth.py  cli.py  config.py  exceptions.py  http_cli.py  http_enhanced_server.py  http_server.py  minimal_test_server.py  server.py  simple_server.py  truenas_client.py  version.py
truenas-mcp/src/resources/: __init__.py  base.py  network.py  services.py  storage.py  system.py  users.py
truenas-mcp/src/utils/: __init__.py  logging.py  resilience.py  validation.py
truenas-mcp/tests/: conftest.py  conftest_extended.py  test_auth_token_file.py  test_basic.py  test_cached_response.py  test_config_validators.py  test_constants.py  test_destructive_operations.py  test_http_cli_token_permissions.py  test_http_server.py  test_jwt_auth_methods.py  test_resilience.py  test_resources.py  test_ssl_warnings.py  test_validation_security.py
(+161 files in other folders)
